load("//kiss:defs.bzl", "build_spec", "museum_project", "test_spec")
load("//kiss:defs.bzl", "LOCAL", "MINIMG", "RBE")
load("//kiss:defs.bzl", "HERMETIC_LLVM")

_RE2_TEST = test_spec(
    targets = [
        "//:all",
        "-//:exhaustive_test",
        "-//:exhaustive1_test",
        "-//:exhaustive2_test",
        "-//:exhaustive3_test",
    ],
    flags = ["-c", "opt"],
)

museum_project(
    name = "re2",
    source_archive = "@re2_archive//file",
    strip_prefix = "re2-2025-11-05",
    toolchains = [HERMETIC_LLVM],
    bazel_version = "8.7.0",
    environments = [LOCAL, RBE, MINIMG],
    build = build_spec(targets = ["//:re2"], flags = ["-c", "opt"]),
    test = _RE2_TEST,
)
