"""Standalone workspace that builds actiond as a bzlmod dependency.

actiond (github.com/hermeticbuild/actiond) is not in the BCR, so the root
bazel-matrix module cannot depend on it without perturbing its own dependency
graph. This dedicated workspace declares the dependency via git_override and
replicates actiond's own root-module overrides, which bzlmod would otherwise
silently drop for a non-root module (overrides only apply from the root):

* archive_override for linux.bzl (pinned commit, not the BCR release)
* single_version_override patches for llvm and zstd (vendored in //patches)

Build the worker with:

    bazel build --config=remote @actiond//cmd/linux-actiond:linux-actiond_linux_x86_64
"""

module(
    name = "actiond_host",
    version = "0.0.0",
)

bazel_dep(name = "actiond", version = "0.1.0")
git_override(
    module_name = "actiond",
    commit = "ca39423bbd78916457f3225dcab826283c18f412",
    remote = "https://github.com/hermeticbuild/actiond",
)

# Referenced directly so --config=remote can name @llvm//:rbe_platform.
bazel_dep(name = "llvm", version = "0.8.1")

# Referenced directly so .bazelrc can set @rules_zig//zig/settings flags.
bazel_dep(name = "rules_zig", version = "0.15.1")

# --- Overrides replicated from actiond's MODULE.bazel ----------------------

archive_override(
    module_name = "linux.bzl",
    integrity = "sha256-2gveHVEG4EE5x3N4kDnUftB7ed/6RRFslFwDquObqRg=",
    strip_prefix = "linux.bzl-e18628f3e177022c2ff0cf93a2e5f2d408f7d2fc",
    urls = ["https://github.com/hermeticbuild/linux.bzl/archive/e18628f3e177022c2ff0cf93a2e5f2d408f7d2fc.tar.gz"],
)

single_version_override(
    module_name = "llvm",
    patch_strip = 1,
    patches = ["//patches:llvm_musl_root_package_copy.patch"],
    version = "0.8.1",
)

single_version_override(
    module_name = "zstd",
    patch_strip = 1,
    patches = ["//patches:zstd_no_pthread.patch"],
    version = "1.5.7.bcr.1",
)
