load("//kiss:defs.bzl", "build_spec", "hermetic_llvm_project_modification", "test_spec")
load("//kiss:defs.bzl", "LOCAL", "RBE")

# LCM (Lightweight Communications and Marshalling) — a low-latency message-passing
# and data-marshalling system widely used in robotics. Source pinned in
# //kiss:extension.bzl (@lcm_archive, v1.5.2). First-party Bazel, run on
# the 8.7 inner with the hermetic LLVM toolchain. We build the static C++ library
# and run a C++ unit test. LCM's MODULE declares a direct platforms dep (no
# PLATFORMS_DEP).
#
hermetic_llvm_project_modification(
    name = "lcm",
    source_archive = "@lcm_archive//file",
    strip_prefix = "lcm-1.5.2",
    bazel_version = "8.7.0",
    environments = [LOCAL, RBE],
    build = build_spec(targets = ["//lcm:lcm-static"], flags = ["-c", "opt"]),
    test = test_spec(targets = ["//test/cpp:memq_test"], flags = ["-c", "opt"]),
)
